🔥 Mass Delete: Part 14 (#2)